--- a/EFCoreBench/EFCoreBench.csproj
+++ b/EFCoreBench/EFCoreBench.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
